--- a/scss_4/_myself.scss
+++ b/scss_4/_myself.scss
@@ -766,7 +766,7 @@
         background: #f5f5f5;
         bottom: 0px;
         z-index: 2;
-        color: #595959;
+        color: #1b1b1b;
         border-top: solid 1px #e8e8e8;
         box-sizing: border-box;
 
@@ -972,12 +972,15 @@
         .changePassword {
             float: right;
             padding: 3px 5px;
-            color: #595959;
-            background: #ffffff;
+            color: #1b1b1b;
+            background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+            box-shadow: 0px 2px 3px 0px #00000049;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #e4e4e4 #d0d0d0 #b4b4b4;
             border-radius: 5px;
             font-size: 15px;
             margin: 8px 10px 0px 0px;
-            box-shadow: 1px 2px 5px 0px #00000017;
 
             /*for IE 9*/
             @media all and (min-width:0\0) and (min-resolution:.001dpcm){
@@ -990,9 +993,10 @@
             }
 
             &:hover,&:active,&.active {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: linear-gradient(to top,#d31c1c 0%,#bb092f 98%);
                 color: #ffffff;
                 box-shadow: none;
+                border: none;
             }
 
             &.none {
@@ -1043,7 +1047,7 @@
             }
 
             span {
-                color: #356bf7;
+                color: #ce1427;
             }
         }
     }
@@ -1174,7 +1178,7 @@
 .mineHideBoard {
     width: 1155px;
     height: 125px;
-    background: #ededed;
+    background: #ddebf3;
     position: absolute;
     z-index: 5;
     left: 270px;
@@ -1212,7 +1216,7 @@
     .topbar {
         width: 100%;
         height: 50px;
-        background: #356bf7;
+        background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
         border-radius: 3px 3px 0px 0px;
         position: relative;
 
@@ -1230,11 +1234,11 @@
             width: 40px;
             height: 40px;
             border-radius: 40px;
-            background: #ededed;
-            border: solid 3px #356bf7;
+            background: #ffffff;
+            border: solid 3px #d31c1c;
             right: -50px;
             top: -50px;
-            box-shadow: 0px 0px 0px 5px #ededed;
+            box-shadow: 0px 0px 0px 5px #ffffff;
 
             &::before {
                 content: "";
@@ -1243,7 +1247,7 @@
                 height: 18px;
                 right: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(45deg);
             }
 
@@ -1254,7 +1258,7 @@
                 height: 18px;
                 left: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(-45deg);
             }
         }
@@ -1264,7 +1268,7 @@
     .box {
         width: 100%;
         height: 160px;
-        background: #f5f5f5;
+        background: #ededed;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
 
@@ -1296,7 +1300,7 @@
             
             span {
                 line-height: 40px;
-                color: #454545;
+                color: #1b1b1b;
                 padding-left: 15px;
             }
 
@@ -1304,21 +1308,29 @@
                 width: 152px;
                 height: 36px;
                 margin-right: 10px;
-                background: #ffffff;
-                color: #454545;
+                background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+                color: #1b1b1b;
                 border-radius: 5px;
                 font-size: 16px;
                 font-weight: bold;
-                box-shadow: 1px 2px 8px 0px #00000049;
+                box-shadow: 0px 2px 3px 0px #00000049;
+                border-style: solid;
+                border-width: 1px;
+                border-color: #e4e4e4 #d0d0d0 #b4b4b4;
 
                 &:last-child {
                     margin: 0px;
-                    border: solid 1px #356bf7;
-                    color: #356bf7;
+                    background: linear-gradient(to bottom,#d31c1c 0%,#bb092f 98%);
+                    color: #ffffff;
+
+                    &:hover,&:active,&.active {
+                        background: linear-gradient(to bottom, #32496d 0%, #507abe 100%);
+                    }
                 }
 
                 &:hover,&:active,&.active {
-                    background: #356bf7;
+                    background: linear-gradient(to top, #d31c1c 0%, #bb092f 98%);
+                    border: none;
                     color: #ffffff;
                     box-shadow: none;
                 }
@@ -1347,7 +1359,7 @@
     .topbar {
         width: 100%;
         height: 50px;
-        background: #356bf7;
+        background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
         border-radius: 3px 3px 0px 0px;
         position: relative;
 
@@ -1365,11 +1377,11 @@
             width: 40px;
             height: 40px;
             border-radius: 40px;
-            background: #ededed;
-            border: solid 3px #356bf7;
+            background: #ffffff;
+            border: solid 3px #d31c1c;
             right: -50px;
             top: -50px;
-            box-shadow: 0px 0px 0px 5px #ededed;
+            box-shadow: 0px 0px 0px 5px #ffffff;
 
             &::before {
                 content: "";
@@ -1378,7 +1390,7 @@
                 height: 18px;
                 right: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(45deg);
             }
 
@@ -1389,7 +1401,7 @@
                 height: 18px;
                 left: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(-45deg);
             }
         }
@@ -1399,7 +1411,7 @@
     .box {
         width: 100%;
         height: 105px;
-        background: #f5f5f5;
+        background: #ededed;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
         text-align: center;
@@ -1407,24 +1419,24 @@
         p {
             font-size: 14px;
             padding-bottom: 20px;
-            color: #454545;
+            color: #1b1b1b;
 
             &.remind {
-                color: #595959;
+                color: #454545;
             }
         }
 
         button {
             width: 160px;
             height: 36px;
-            background: #ffffff;
+            background: linear-gradient(to bottom,#d31c1c 0%,#bb092f 98%);
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
-            color: #454545;
+            color: #ffffff;
             box-shadow: 1px 2px 8px 0px #00000049;
             &:hover,&:active,&.active {
-                background: #356bf7;
+                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
                 color: #ffffff;
                 box-shadow: none;
             }
@@ -1452,7 +1464,7 @@
     .topbar {
         width: 100%;
         height: 40px;
-        background: #356bf7;
+        background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
         border-radius: 3px 3px 0px 0px;
         position: relative;
         text-align: center;
@@ -1470,11 +1482,11 @@
             width: 40px;
             height: 40px;
             border-radius: 40px;
-            background: #ededed;
-            border: solid 3px #356bf7;
+            background: #ffffff;
+            border: solid 3px #d31c1c;
             right: -50px;
             top: -50px;
-            box-shadow: 0px 0px 0px 5px #ededed;
+            box-shadow: 0px 0px 0px 5px #ffffff;
             &::before {
                 content: "";
                 position: absolute;
@@ -1482,7 +1494,7 @@
                 height: 18px;
                 right: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(45deg);
             }
             &::after {
@@ -1492,7 +1504,7 @@
                 height: 18px;
                 left: 16px;
                 top: 8px;
-                background: #356bf7;
+                background: #d31c1c;
                 transform: rotate(-45deg);
             }
         }
@@ -1502,7 +1514,7 @@
     .box {
         width: 100%;
         height: 315px;
-        background: #f5f5f5;
+        background: #ededed;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
 
@@ -1543,7 +1555,7 @@
 
             span {
                 line-height: 50px;
-                color: #454545;
+                color: #1b1b1b;
                 padding-left: 30px;
                 font-weight: bold;
             }
@@ -1552,9 +1564,9 @@
         button {
             width: 220px;
             height: 36px;
-            background: #fff;
+            background: linear-gradient(to bottom,#d31c1c 0%,#bb092f 98%);
             border: none;
-            color: #454545;
+            color: #ffffff;
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
@@ -1564,8 +1576,8 @@
             bottom: 0%;
             box-shadow: 1px 2px 8px 0px #00000049;
             &:hover,&:active,&.active {
-                background: #356bf7;
-                color: #fff;
+                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
+                color: #ffffff;
                 box-shadow: none;
             }
         }
