--- a/css_2/style.css
+++ b/css_2/style.css
@@ -3059,19 +3059,19 @@ main .bg {
   box-shadow: none;
 }
 .minetable.creditcard tr td .creditcardBtn.c1:active, .minetable.creditcard tr td .creditcardBtn.c1.active, .minetable.creditcard tr td .creditcardBtn.c2:active, .minetable.creditcard tr td .creditcardBtn.c2.active, .minetable.creditcard tr td .creditcardBtn.c3:active, .minetable.creditcard tr td .creditcardBtn.c3.active {
-  background: linear-gradient(-45deg, #3d3d3d 0%, #242424 100%);
-  color: #fefefe;
-  box-shadow: 0px 0px 10px 2px #49701f;
+  background: #ffffff;
+  color: #454545;
+  box-shadow: 0px 0px 10px 2px #00000049;
 }
 .minetable.creditcard tr td .creditcardBtn.c1:active::before, .minetable.creditcard tr td .creditcardBtn.c1.active::before, .minetable.creditcard tr td .creditcardBtn.c2:active::before, .minetable.creditcard tr td .creditcardBtn.c2.active::before, .minetable.creditcard tr td .creditcardBtn.c3:active::before, .minetable.creditcard tr td .creditcardBtn.c3.active::before {
   content: "";
   position: absolute;
   width: 30px;
   height: 30px;
-  border: solid 2px #34b00e;
+  border: solid 2px #356bf7;
   border-radius: 30px;
-  background: #343434;
-  box-shadow: 0px 0px 0px 3px #343434, 0px 0px 10px 2px #49701f;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 3px #ffffff, 0px 0px 10px 2px #00000049;
   top: -8px;
   right: -8px;
 }
@@ -3080,7 +3080,7 @@ main .bg {
   position: absolute;
   width: 8px;
   height: 14px;
-  border: solid 5px #47e916;
+  border: solid 5px #356bf7;
   border-width: 0px 4px 4px 0px;
   transform: rotate(45deg);
   top: -2px;
