--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -2876,7 +2876,7 @@
 			th {
 				
 				button {
-					color: #fff;
+					color: #454545;
 					background: transparent;
 					border: none;
 					float: right;
@@ -2896,7 +2896,7 @@
 						position: absolute;
 						width: 14px;
 						height: 14px;
-						background: url('../images/reset2.png') no-repeat;
+						background: url('../images/reset.png') no-repeat;
 						background-size: 100%;
 						left: -18px;
 						top: 3px;
